# TLDR-component

./: .gitignore  .lightning  .lightningignore  .pre-commit-config.yaml  README.md  app.py  dummy_test_app.py  model.py  setup.cfg  setup.py
.github/workflows/: ci.yml
components/: tldr.py
examples/text_summarization/: .lightning  app.py  app_lite.py  model.py  requirements.txt  requirements_lite.txt
lai-tldr/text_summarization/: __init__.py
lai_tldr/: __init__.py  callbacks.py  data.py  module.py  text_summarization.py  tldr.py
lai_tldr/tests/: test_tldr.py
lai_tldr/text_summarization/: __init__.py
llm_components/text_summarization/: __init__.py  text_summarization.py  tldr.py
tests/: conftest.py  requirements.txt  test_app.py  test_callbacks.py  test_data.py  test_module.py
