[metadata]
name = llm-components
version = 0.0.1
description = LAI components for running LLM training and inference in the cloud
long_description = file: README.md
author = Lightning-AI
url = https://github.com/Lightning-AI/LAI-LLM-components
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, AI
project_urls =
    source = https://github.com/Lightning-AI/LAI-LLM-components
    tracker = https://github.com/Lightning-AI/LAI-LLM-components/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1