[metadata]
name = lai-tldr
version = 0.0.1
description = LAI components for training text summarization
long_description = file: README.md
author = Lightning-AI
url = https://github.com/Lightning-AI/LAI-TLDR
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, AI
project_urls =
    source = https://github.com/Lightning-AI/LAI-TLDR
    tracker = https://github.com/Lightning-AI/LAI-TLDR/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    sentencepiece
    transformers==4.24.0
    scikit-learn

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1