[metadata]
name = lai-tldr
version = 0.0.1
description = LAI components for training text summarization
long_description = file: README.md
author = Lightning-AI
url = https://github.com/Lightning-AI/LAI-TLDR
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, AI
project_urls =
    source = https://github.com/Lightning-AI/LAI-TLDR
    tracker = https://github.com/Lightning-AI/LAI-TLDR/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    sentencepiece
    transformers==4.16.2
    scikit-learn
    deepspeed
    tensorboard

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
ignore = W503,E203,C901
max-line-length = 120
exclude = tests/*,mingpt/*,nanogpt/*
max-complexity = 10
